Finalize import and images

--- a/content/31.bitmap.md
+++ b/content/31.bitmap.md
@@ -1,28 +1,13 @@
-<!-- matcnups:
-  lang1  : files
-  lang2a : selector1
-  lang2b : selector5
-  lang2c : selector4
-  lang3  : zorder
-  lang4  : collisions
-  lang5  : index
-  lang6  : ghosts
-  lang7  : vary_order1_or0
-  lang8  : vary_order2_to6
-  lang9  : vary_selector
-  lang10 : vary_decomp_to0
--->
-
 ## Indexing Discrete-Point Datasets {#sec:point_indexing}
 
 Advances in both hardware and software facilitate astrophysical datasets
 of growing complexity and size. The datasets produced by numerical
 simulations can currently reach sizes of $\sim$100 Tbytes split across
-hundreds of files [e.g. @Croft2015]. For even simple analysis tasks, the
+hundreds of files [e.g. @raw:Croft2015]. For even simple analysis tasks, the
 cost of incrementally reading datasets this large into memory is quite
 high. This problem is not limited to theoretical work. During operations
 the Large Synoptic Survey Telescope (LSST) will produce 15 Tbytes of
-data each night [@Juric2015a]. In order to analyze such large datasets,
+data each night [@raw:Juric2015a]. In order to analyze such large datasets,
 we need innovative techniques for quickly indexing and selecting data
 without loading the entire dataset into memory. We present a technique
 for using Morton bitmap indexes to map files and accelerate data
@@ -62,14 +47,14 @@ selection in $x$ will still require a greater number of files since the
 partition is not well localized in that dimension. Panels (c) and (d)
 are both examples of partitioning the domain between the files along a
 space filling curve [Morton and Hilbert curves respectively;
-@Morton1996; @Hilbert1970]. These partitions have the greatest chance of
+@raw:Morton1996; @raw:Hilbert1970]. These partitions have the greatest chance of
 limiting the number of files that must be loaded for a contiguous
 selection with slightly improved localization for the Hilbert curve.
 Consequently, Hilbert curves have also been used for load-balancing in
-parallel simulation codes like Gadget-2 [@Springel2005b] and RAMSES
-[@Teyssier2001].
+parallel simulation codes like Gadget-2 [@raw:Springel2005b] and RAMSES
+[@raw:Teyssier2001].
 
-Figure @fig:selectors shows examples of three selections within the above domain partitions.
+Figure @fig:selector1 shows examples of three selections within the above domain partitions.
 
 ![
 Examples of file selection for four different domain partitions and three different shaded selectors.
@@ -125,7 +110,7 @@ Morton Indices
 --------------
 
 Morton ordering maps multidimensional data onto a one-dimensional space
-filling curve [@Morton1996]. This is done by breaking up the domain into
+filling curve [@raw:Morton1996]. This is done by breaking up the domain into
 cells where each cell's position within the $N$-dimensional domain can
 be described by $N$ integers. The Morton index of the cell is then
 created by interleaving the bits of the $N$ integers to create a single
@@ -146,25 +131,24 @@ dimension ($3\times21$ bits = 63 bits). If the domain is binarily
 divided into subcells to some order $k$ in each dimension (i.e. $2^{Nk}$
 cells), coarser Morton indices can be obtained by simply masking lower
 bits. Morton ordering has been used to speed up quadtree construction
-[@Hjaltason2002], nearest neighbor searches [@Connor2010], and range
-queries [@Orenstein1984]. By recording the indices of the cells
+[@raw:Hjaltason2002], nearest neighbor searches [@raw:Connor2010], and range
+queries [@raw:Orenstein1984]. By recording the indices of the cells
 containing data from each file within a dataset, Morton indices can also
 be used to construct one-dimensional maps of an $N$-dimensional dataset
 that can be represented as bitmaps.
 
-Bitmaps & EWAH Compression
---------------------------
+#### Bitmaps & EWAH Compression
 
 Bitmap indexes use the values of single bits within an array of bits to
 describe dataset properties. This form requires minimal memory and can
 be filtered using computationally inexpensive boolean operations. Bitmap
 indexes have long been popular for use with large data warehouses
-[@Wu1998; @Chan1998; @Chan1999]. However, as scientific datasets have
+[@raw:Wu1998; @raw:Chan1998; @raw:Chan1999]. However, as scientific datasets have
 become larger and more complex, they have also begun to gain traction in
 a diverse array of scientific fields including geosciences
-[@Malensek2014], earth sciences, rocket science
-[@Sinha2006; @Sinha2007], high-energy physics [@Stockinger2000], and
-combustion [@Wu2003].
+[@raw:Malensek2014], earth sciences, rocket science
+[@raw:Sinha2006; @raw:Sinha2007], high-energy physics [@raw:Stockinger2000], and
+combustion [@raw:Wu2003].
 
 In cases where data attributes can take on a finite set of values, one
 bitmap is constructed for each possible attribute value. Within the
@@ -175,7 +159,7 @@ attributes/values can be done using boolean AND operations on the
 corresponding bitmaps. In the case of scientific data, which often
 contains floating point value attributes, the attributes must be binned
 prior to constructing the bitmaps
-[@Yu1998; @Shoshani1999; @Stockinger2004]. Here, Morton indices are used
+[@raw:Yu1998; @raw:Shoshani1999; @raw:Stockinger2004]. Here, Morton indices are used
 to bin N-dimensional floating point data onto one-dimension. As a
 result, each file can be described by one bitmap.
 
@@ -188,7 +172,7 @@ file. For large bitmaps, this can become costly in terms of memory and
 the time required to perform bitmap operations. However, Enhanced
 Word-Aligned Hybrid (EWAH) compression can be used to limit these costs,
 particularly when the domain is densely or sparsely populated in
-localized regions [@Wu2001; @Lemire2010; @Kaser2016].
+localized regions [@raw:Wu2001; @raw:Lemire2010; @raw:Kaser2016].
 
 An EWAH compressed bitmap will be smaller when there are long sequences,
 or "runs," of identical values. This means that an EWAH compressed
@@ -201,8 +185,7 @@ that the bits denoting those regions will be adjacent, increasing the
 likelihood that there will be runs of identical (set/unset) bits and
 limiting the size of the compressed bitmaps.
 
-Collisions
-----------
+#### Collisions
 
 It is possible that two files will contain data within the same Morton
 cell. This would mean that any time that cell is touched by a selection,
@@ -226,7 +209,7 @@ The smaller grids within these cells on the right are the boundaries of 2nd orde
 ](images/bitmap/collisions.png){#fig:collision}
 
 Collisions can be limited by either increasing the order of the index or
-allowing for multi-resolution indexes [@Sinha2006; @Sinha2007]. Panel
+allowing for multi-resolution indexes [@raw:Sinha2006; @raw:Sinha2007]. Panel
 (b) of Figure @fig:collision demonstrates an example of nesting a second index
 within cells that contain collisions. In those cells which contained
 collisions, a 2nd order Morton index was added. Those cells with collisions at
@@ -243,19 +226,19 @@ increases the size of the resulting map and the time it takes to
 identify files touched by a selection. However, if the order of the
 coarse index is too small or the order of the refined index too large,
 this too can increase the cost of a selection in terms of memory and
-time. Section @SS:test_order discusses this tradeoff and how to choose
+time. Section [sec:test_order] discusses this tradeoff and how to choose
 index orders.
 
 Collisions are more common for file partitioning schemes that are not
 localized. Figure @fig:collision_files
 shows an example of collisions for the
-different partitioning schemes discussed in Section @SS:decomp.
+different partitioning schemes discussed in Section [sec:decomp].
 
 ![
 Examples of collisions for four different domain partitioning schemes.
 The heavy black lines denote 1st order Morton cells.
 The presence of more that one file (color) within a Morton cell indicates a collision.
-](images/bitmaps/index.png){#fig:collision_files}
+](images/bitmap/index.png){#fig:collision_files}
 
 For the random domain partition in panel (a), every cell within a 1st
 order Morton index will contain data from all 8 files. This means that
@@ -263,15 +246,14 @@ any selection using a 1st order bitmap index will require every file to
 be loaded. For the more localized partitions in panels (c) and (d), only
 two files touch each Morton cell.
 
-Ghost Zones
------------
+#### Ghost Zones
 
 It is often the case that, in selecting a region, additional padding
 around the region should be included in the selection. This is
 particularly useful for algorithms that need information about
 neighboring points in the domain [e.g. gas properties in simulations
 using Smoothed Particle Hydrodynamics; SPH;
-@Monaghan1992; @Springel2001; @Springel2005b]. For Morton indices, this
+@raw:Monaghan1992; @raw:Springel2001; @raw:Springel2005b]. For Morton indices, this
 is straightforward as the indices neighboring Morton cells can be found
 by incrementing the bits corresponding to each dimension. We have
 included the ability to pad selectors with some number of Morton cells
@@ -281,7 +263,7 @@ not the selector itself are referred to below as 'ghost files'.
 Depending on how the domain is split between files, the inclusion of
 ghost zones may or may not increase the number of files that need to be
 loaded. Figure @fig:ghosts shows an example of a ghost zone around the
-first selector from Figure @fig:selectors.
+first selector from Figure @fig:selector1.
 
 ![
 Examples of a selector ghost zone with a width of one Morton cell at an index order of 3 for four different domain partitioning schemes.
@@ -299,10 +281,9 @@ of the coarse index will be larger than those added at the order of the
 refined index and will have a higher probability of touching additional
 files. While including ghost zones is advantageous when neighbor info is
 needed, it also increases the computational cost of identifying files
-(see Section @S:tests).
+(see Section [sec:tests]).
 
-Methods {#S:methods}
-=======
+### Methods {#sec:methods}
 
 The basic procedure for constructing the bitmap index is as follows:
 
@@ -365,8 +346,7 @@ edge of the selector are added to a separate bitmap. For cells without
 collisions, the neighbors are added at the coarse bitmap order. If there
 are collisions, the neighbors are added at the refined bitmap order.
 
-Tests {#S:tests}
-=====
+### Tests {#sec:tests}
 
 The utility of using Morton index bitmaps for mapping files to decrease
 query times was tested on artificial N-body simulation datasets
@@ -380,13 +360,12 @@ to be loaded during analysis of a selected region and the overall
 fraction of time spent on I/O will be lower. If less time is required to
 identify the files touched by a given selector, more selections can be
 made using the same computational resources. This was done for varying
-index orders (Section @SS:test_order), selector sizes (Section @SS:test_size),
-and partitions of the domain between files (Section @SS:test_decomp).
+index orders (Section [sec:test_order]), selector sizes (Section [sec:test_size]),
+and partitions of the domain between files (Section [sec:test_decomp]).
 
-Index Order {#SS:test_order}
------------
+#### Index Order {#sec:test_order}
 
-### Overall Refinement {#SSS:test_order1}
+#### Overall Refinement {#sec:test_order1}
 
 The order of the Morton indices used to map the files determines the
 time required to identify files and the number of collisions that will
@@ -405,7 +384,7 @@ Dependence of query time (top), fraction of files selected/cells with collisions
 The solid black lines correspond to the query times and files identified by just the selectors.
 The dashed blue lines correspond to the query times and additional files selected when a ghost zone with the width of one Morton cell is added around the selectors.
 The dash-dotted line in the middle panel shows the fraction of cells with collisions between files.
-](images/bitmap/vary_order1_or0png){#fig:test_order1}
+](images/bitmap/vary_order1_or0.png){#fig:test_order1}
 
 Below a bitmap index order of 4, there are collisions between multiple
 files within every cell, resulting in a larger number of files being
@@ -422,7 +401,7 @@ filling curve. While it is generally true that the time required to
 identify files using a bitmap index will increase exponentially with the
 size of the index, the order of the index that results in the minimal
 number of files for any dataset will depend upon how the domain is
-partitioned between files (see Section @SS:test_decomp).
+partitioned between files (see Section [sec:test_decomp]).
 The memory required to store the index for
 the test dataset scales according to $\propto2^{2k}$, for a
 $k^{\mbox{th}}$ order index. If uncompressed bitmaps had been used
@@ -430,10 +409,10 @@ instead of EWAH compressed bitmap, the memory would have scaled with the
 total number of cells contained within the 3-dimensional test domain
 ($2^{3k}$).
 
-### Collision Refinement {#SSS:test_order2}
+#### Collision Refinement {#sec:test_order2}
 
 Increasing the refinement of the primary index does so for the entire
-domain and, as seen in Section @SSS:test_order1, can become costly in terms of the memory
+domain and, as seen in Section [sec:test_order1], can become costly in terms of the memory
 required to store the bitmap and the time required to perform
 operations. However, it is also possible to increase refinement by
 nesting a second Morton bitmap index within those cells of the primary
@@ -449,7 +428,7 @@ shows the results for adding a secondary
 index of varying order with the overall refinement order of the index
 (primary index order + secondary index order) held constant at 6. The
 test dataset and selectors applied were the same as in
-Section @SSS:test_order1.
+Section [sec:test_order1].
 
 ![
 Dependence of query time (top), fraction of files selected/cells with collisions (middle), and memory required to store the index (bottom) on the order of the secondary index used to refine collisions.
@@ -480,15 +459,14 @@ and does not need a high level of refinement at collisions. However, if
 a data set were less uniform with concentrations of points, the optimal
 order of the second index for performance may be higher.
 
-Selector Size {#SS:test_size}
--------------
+#### Selector Size {#sec:test_size}
 
 The time required to identify files touched by a selection will also
 depend upon the size of the region being selected. Larger selectors will
 intersect more indices and more files, resulting in more bitmap
 operations. Figure @fig:test_size
 shows the result from varying the selector
-size. The same test data set from Section @SS:test_order
+size. The same test data set from Section [sec:test_order]
 was used. A bitmap index with a 4th order primary Morton index and 2nd
 order secondary Morton index was used in all cases. Each cube selector
 was placed at the center of the domain and scaled along each dimension
@@ -516,10 +494,9 @@ selectors that are nearing the edges of file boundaries. However,
 queries including ghost zones require slightly more time even when this
 is not the case.
 
-Domain Partitioning {#SS:test_decomp}
--------------------
+#### Domain Partitioning {#sec:test_decomp}
 
-As discussed in Section @SS:decomp, a bitmap index is more effective in cases where
+As discussed in Section [sec:decomp], a bitmap index is more effective in cases where
 the domain is partitioned between files in a localized way. If files
 contain non-contiguous parts of the domain, contiguous selections will
 require more files to be loaded. Figure @fig:test_decomp
@@ -527,7 +504,7 @@ shows results for four different
 partitioning schemes. All four data sets cover the same
 three-dimensional domain with $1024^3$ points split across 512 files.
 The Hilbert dataset is the same one used in previous tests (see
-Section @SS:test_order for a description). The Morton dataset is constructed in a similar way
+Section [sec:test_order] for a description). The Morton dataset is constructed in a similar way
 to the Hilbert dataset with file partitions occurring along a 6th order
 Morton curve and including a 10% scatter of points between Morton cells.
 The sliced dataset is partitioned in slices along one dimension with 10%
@@ -561,8 +538,7 @@ Overall, this technique offers a considerable improvement in performance
 over other methods that require reading, evaluating and discarding all
 of the particles.
 
-Summary & Discussion {#S:discuss}
-====================
+### Summary & Discussion {#sec:discuss}
 
 Mapping files using Morton bitmap indexes speeds up analysis of large
 datasets split across multiple files by reducing the number of files
@@ -591,7 +567,7 @@ Bitmap indexing is particularly useful in astronomy and astrophysics.
 Output from N-body simulations is often split between multiple files to
 take advantage of parallel I/O and the domain decomposition generally
 leads to localized partitioning between files
-[@Springel2001; @Springel2005b; @Hopkins2015].
+[@raw:Springel2001; @raw:Springel2005b; @raw:Hopkins2015].
 
 Currently, this technique is most useful for datasets split across
 multiple files. However, it can also be applied to single files by
@@ -603,32 +579,20 @@ three-dimensional spatial datasets like those produced by astrophysical
 simulations, the same methods can be applied to non-spatial datasets
 with arbitrary dimensionality.
 
-Code {#S:code}
-====
+### Code {#sec:code}
 
 These procedures have been implemented as part of the yt python package
-[@Turk20d11a] in order to facilitate the analysis of large astrophysical
+[@raw:Turk20d11a] in order to facilitate the analysis of large astrophysical
 N-body simulations; currently undergoing review for inclusion in a
 future version of yt (3.4 or later), our implementation is available at
 https://bitbucket.org/langmm/yt-bitmap. The open source EWAHBoolArray
 C++ package is used for implementing EWAH bitmaps
-[@Lemire2010; @Kaser2016] and exposed to Python using Cython
-[@Behnel2011].
+[@raw:Lemire2010; @raw:Kaser2016] and exposed to Python using Cython
+[@raw:Behnel2011].
 
-Acknowledgment {#acknowledgment .unnumbered}
-==============
+### Acknowledgment {#acknowledgment .unnumbered}
 
 The authors would like to thank Daniel Lemire for his open source EWAH
 implementation. yt is developed by a large number of independent
 researchers from numerous institutions around the world. Their
 commitment to open science has helped make this work possible.
-
-[^1]: Manuscript received Sept. 1, 2016. This publication is supported
-    in part by the Gordon and Betty Moore Foundation's Data-Driven
-    Discovery Initiative through Grant GBMF4561 to Matthew Turk. This
-    material is based upon work supported by the National Science
-    Foundation under Grant No. ACI-1535651.
-
-[^2]: The authors are with the National Center for Supercomputing
-    Application, University of Illinois, Urbana-Champaign, IL 61801 USA
-    (e-mail: langmm\@illinois.edu)
