Some new text about governance

--- a/content/01.abstract.md
+++ b/content/01.abstract.md
@@ -1,3 +1,5 @@
 ## Abstract {.page_break_before}
 
-Abstract here!
+We present the current version of the `yt` software package.
+`yt` is an open-source, community-developed platform for analysis of volumetric data, with readers for several dozen data formats, indexing systems for gridded data, adaptive mesh refinement data, unstructured mesh data, discrete and particle formats, and octree-based data, as well as the combination of these.
+We describe the systems implemented in `yt` to facilitate a "science-first" approach to data analysis, wherein the emphasis is on the meaning and interpretation of the data as opposed to its discretization or layout.
