moving around some YTEP text

--- a/content/15.development_procedure.md
+++ b/content/15.development_procedure.md
@@ -1,9 +1,62 @@
 ## Development Procedure {#sec:development}
 
+`yt` is developed openly.  During the Spring of 2017, development transitioned from occuring on [Bitbucket](https://bitbucket.org/yt_analysis/) to [GitHub](https://github.com/yt-project/), and the source code management system was changed from [Mercurial](https://www.mercurial-scm.org/) to [git](https://git-scm.org/).
+
+
 ### Answer Testing
+
+
 
 ### Code Review
 
 ### YTEP Process {#sec:ytep}
+
+YTEPs, or "`yt`-enhancement proposal" are vehicles for collaborative decision-making in the project.
+Implemented shortly after the first paper on `yt` was released, the YTEP process experienced a fairly pronounced period of usage during the transition between versions 2.0 and 3.0 of `yt`, and has since been utilized considerably less.
+During periods of rapid development, the needs of the community for stability have to be balanced against desires for change; the YTEP process was implemented to facilitate stakeholder feedback, allow for discussion of design decisions, and to prompt detailed thinking about how and why things should be implemented.
+We have modeled this process against that used in the AstroPy community ("APE").
+To create a new proposal for a large change to `yt`, or to document a decision-making process, individuals prepare a description of the background, motivation for the change, the steps to implementation, and potential alternative approaches.
+The proposal is discussed through the pull-request process, and once discussion has concluded it is added to the [repository](https://github.com/yt-project/ytep) of YTEPs that is auto-built and [deployed](https://ytep.readthedocs.org/).
+The accepted YTEPs have included implementing the chunking system, developing a units system, removing legacy components, and implementing a code of conduct.
+
+Below, we include a table of current YTEPs as of this writing.
+
+| Number   | YTEP Title                                            | Created            | Authors                                                             |
+|----------|-------------------------------------------------------|--------------------|---------------------------------------------------------------------|
+| 0001     | IO Chunking                                           | November 26, 2012  | Matthew Turk                                                        |
+| 0002     | Profile Plotter                                       | December 5, 2012   | Matthew Turk                                                        |
+| 0003     | Standardizing field names                             | December 11, 2012  | Casey Stark, Nathan Goldbaum, Matt Turk                             |
+| 0005     | Octrees for Fluids and Particles                      | December 24, 2012  | Matthew Turk                                                        |
+| 0006     | Periodicity                                           | January 10, 2013   | Matthew Turk, Nathan Goldbaum                                       |
+| 0007     | Automatic Pull Requests' validation                   | February 21, 2013  | Kacper Kowalik                                                      |
+| 0008     | Release Schedule                                      | February 21, 2013  | Matthew Turk                                                        |
+| 0009     | AMRKDTree for Data Sources                            | February 28, 2012  | Sam Skillman                                                        |
+| 0010     | Refactoring for Volume Rendering and Movie Generation | March 3, 2013      | Cameron Hummels                                                     |
+| 0011     | Symbol units in yt                                    | March 7, 2013      |                                                                     |
+| 0012     | Halo Redesign                                         | March 7, 2013      | Britton Smith, Cameron Hummels, Chris Moody, Mark Richardson, Yu Lu |
+| 0013     | Deposited Particle Fields                             | April 25, 2013     | Chris Moody, Matthew Turk, Britton Smith, Doug Rudd, Sam Leitner    |
+| 0014     | Field Filters                                         | July 2nd, 2013     | Matthew Turk                                                        |
+| 0015     | Transfer Function Refactor                            | August 13, 2013    | Sam Skillman                                                        |
+| 0016     | Volume Traversal                                      | September 10, 2013 | Matthew Turk                                                        |
+| 0017     | Domain-Specific Output Types                          | September 18, 2013 | Matthew Turk and Anthony Scopatz                                    |
+| 0018     | Changing dict-like access to Static Output            | September 18, 2013 | Matthew Turk                                                        |
+| 0019     | Reduce items in main import                           | October 2, 2013    | Matthew Turk                                                        |
+| 0020     | Removing PlotCollection                               | March 18, 2014     | Matthew Turk                                                        |
+| 0021     | Particle-Only Plots                                   | August 29, 2014    | Andrew Myers                                                        |
+| 0022     | Benchmarks                                            | January 19, 2015   | Matthew Turk                                                        |
+| 0023     | yt Community Code of Conduct                          | July 11, 2015      | Britton Smith                                                       |
+| 0024     | Alternative Smoothing Kernels                         | August 1, 2015     | Bili Dong                                                           |
+| 0025     | The ytdata Frontend                                   | August 31, 2015    | Britton Smith                                                       |
+| 0026     | NumPy-like Operations                                 | September 21, 2015 | Matthew Turk                                                        |
+| 0027     | Non-Spatial Data                                      | December 1, 2015   | Matthew Turk, Nathan Goldbaum, John ZuHone                          |
+| 0028     | Alternative Unit Systems                              | December 8, 2015   | John ZuHone, Nathan Goldbaum, Matthew Turk                          |
+| 0029     | Extension Packages                                    | January 25, 2016   | Matthew Turk                                                        |
+| 0031     | Unstructured Mesh                                     | December 18, 2014  | Matthew Turk                                                        |
+| 0032     | Removing the global octree mesh for particle data     | February 9 2017    | Nathan Goldbaum, Meagan Lang, Matthew Turk                          |
+| 0033     | Dropping Python2 Support                              | November 28, 2017  | Nathan Goldbaum                                                     |
+| 0034     | yt FITS Image Standard                                | September 9, 2018  | John ZuHone                                                         |
+| 1000     | GitHub Migration                                      | March 25, 2017     | Lots of folks                                                       |
+| 1776     | Team Infrastructure                                   | August 24, 2014    | Britton Smith                                                       |
+| 3000     | Let's all start using yt 3.0!                         | October 30, 2013   | Matthew Turk                                                        |
 
 
