adding some dev stuff

--- a/content/15.development_procedure.md
+++ b/content/15.development_procedure.md
@@ -1,13 +1,34 @@
 ## Development Procedure {#sec:development}
 
-`yt` is developed openly.  During the Spring of 2017, development transitioned from occuring on [Bitbucket](https://bitbucket.org/yt_analysis/) to [GitHub](https://github.com/yt-project/), and the source code management system was changed from [Mercurial](https://www.mercurial-scm.org/) to [git](https://git-scm.org/).
+`yt` is developed openly.
+During the Spring of 2017, development transitioned from occuring on [Bitbucket](https://bitbucket.org/yt_analysis/) to [GitHub](https://github.com/yt-project/), and the source code management system was changed from [Mercurial](https://www.mercurial-scm.org/) to [git](https://git-scm.org/).
+Development occurs through the "pull request" model, wherein changes to the codebase are made and then requested to be included in the primary repository.
+Typically, there are two branches of development, and occasionally three.  The first of these is the "stable" branch, which is much slower-paced, and typically only modified during the release periods.
+The second is that of "master" (which is the conventional term in git terminology; the corresponding mercurial term would be "default") which is where current development takes place.
+The "master" branch is meant to be for development proceeding that does not drastically disrupt usage patterns.
+Occasionally, such as during the development of `yt` 4.0, a third branch is included in the primary repository.
+This development branch is open for large and potentially disruptive changes, but in order to centralize code review and developer attention it takes place there.
+For instance, during the development of `yt` 4.0, the branch `yt-4.0` was where the global mesh was removed and where the units subsystem was removed and replaced with `unyt`.
 
+This three-pronged approach generally has suited the community; the process of backporting changes from the "master" branch to the "stable" branch can be time-consuming.
+However, balancing the needs of a community requiring stable methods for analyzing data against the ease of development suggests that this is a toll worth paying.
 
-### Answer Testing
+In general, the development of `yt` is reasonably top-heavy, with the majority of contributionscoming from a core group of individuals.
+We discuss the implications of this on sustainability in Section [sec:sustainability].
+
+### Unit Testing {#sec:unit_testing}
+
+The `yt` codebase includes a number of unit tests; although extensive, their existence post-dates the initial development of the code, and they largely work around the extant APIs at the time of their creation.
+Most modern recommendations for developing scientific software emphasize isolated components, well-structured interfaces, and few side effects.
+While the development process attempts to emphasize development of isolated APIs and well-constrained unit tests, the balance struck between enabling contribution from junior developers and ensuring the (subjective) standards of the code base does not always fall on the side of rigid design.
+
+### Answer Testing {#sec:answer_testing}
 
 
 
 ### Code Review
+
+Code review in `yt` is conducted on a line-by-line basis, as well as on a higher-level regarding pull requests.  
 
 ### YTEP Process {#sec:ytep}
 
