updating development process

--- a/content/15.development_procedure.md
+++ b/content/15.development_procedure.md
@@ -22,9 +22,34 @@ The `yt` codebase includes a number of unit tests; although extensive, their exi
 Most modern recommendations for developing scientific software emphasize isolated components, well-structured interfaces, and few side effects.
 While the development process attempts to emphasize development of isolated APIs and well-constrained unit tests, the balance struck between enabling contribution from junior developers and ensuring the (subjective) standards of the code base does not always fall on the side of rigid design.
 
+Many of the `yt` APIs that are tested require the existence of a "dataset."
+For instance, the testing of whether objects are correctly selected by a sphere selector (which absolutely *could* be tested in isolation, were the APIs more separable) is done via creating several different sets of mock datasets of different organizations and shapes and testing whether or not they correctly choose the data points to be included.
+To support these operations, the `yt` testing utilities provide helper functions for creating mock datasets that have different geometric configurations and different collections of "fields" included in their set of primitive values.
+Many of the tests are parameterized against the types and organizations of the datasets, the decomposition across mock processors, and the underlying values of the fields.
+This ensures that we check against errors and bugs that may depend on behavior that varies as the number of processors or the organization of the data changes.
+One example of this would be in the selection of grid values for a single grid of size $128^3$.
+The values selected in this should match the values selected in the same grid decomposed into eight sets of $64^3$ cells, or 64 sets of $32^3$ cells.
+
+The mechanism by which fields are tested is somewhat more extensive, touching on two different needs.
+The first need is that of accuracy -- fields with known answers, or fields that can be written to be decomposed into primitive, non-optimized operations, are tested for correctness.
+The second need is that of dependency calculation; all fields should have their dependencies correctly detected.
+For example, if a dataset has primitive fields for "mass" and "velocity," the calculation of momentum should require both.
+If the dataset includes a "momentum" field, then that should be detected as well.
+This dependency calculation enables `yt` to consolidate IO tasks and read as much data as possible in each pass over the full dataset.
+In addition to this, fields are tested to ensure that the values generated for them are independent of the organization of the dataset.
+Like in the example above, the "momentum" field for a fixed set of values should be identical regardless of the decomposition of the individual cell elements.
+
+Wherever possible, analytical solutions are preferred.
+For processes like surface extraction, this might include ensuring that fixed radii extraction produce the correct spherical region.
+For streamlines, it might include computing the analytical solution to an integration along a known vector field.
+And for projections, it would mean that integrating the path with a weight of "one" should result in a uniform set of values equal to the path length across the domain.
+
+At present, the unit tests in `yt` take a considerable amount of time to run, and are using the nosetests framework.  Modern python practice is to use the newer pytest framework, and efforts are underway to port `yt` to utilize pytest, and in the process, attempt to reduce overall runtime.
+
 ### Answer Testing {#sec:answer_testing}
 
-
+The most time-consuming part of the testing process is what we refer to as "answer testing."
+Because so much of `yt` is focused on computing analysis results, and because some of these analysis results simultaneously depend on specific IO routines, selection routines, and many "frontend-specific" pieces of code, we have built a system for ensuring that for a given set of analysis operations, the result of a set of operations does not change beyond a fixed (typically quite small) tolerance.
 
 ### Code Review
 
