adding code review

--- a/content/15.development_procedure.md
+++ b/content/15.development_procedure.md
@@ -51,9 +51,20 @@ At present, the unit tests in `yt` take a considerable amount of time to run, an
 The most time-consuming part of the testing process is what we refer to as "answer testing."
 Because so much of `yt` is focused on computing analysis results, and because some of these analysis results simultaneously depend on specific IO routines, selection routines, and many "frontend-specific" pieces of code, we have built a system for ensuring that for a given set of analysis operations, the result of a set of operations does not change beyond a fixed (typically quite small) tolerance.
 
+
+
 ### Code Review
 
-Code review in `yt` is conducted on a line-by-line basis, as well as on a higher-level regarding pull requests.  
+Code review in `yt` is conducted on a line-by-line basis, as well as on a higher-level regarding pull requests.
+The workflow for code review roughly follows this outline:
+
+ 1. A pull request is issued.  When a new pull request is issued, a template is provided that includes a description of the change, requesting information about its compliance with coding standards, etc.
+ 2. The label "triage" is automatically applied, and removed when a team member applies the correct component label.
+ 3. Code is reviewed, line-by-line, and suggestions made for either stylistic or algorithmic reasons.
+ 4. This process is iterated, ensuring that tests, style and accuracy are maintained.
+
+One increasing issue with the code review process is ensuring that changes are reviewed with appropriate urgency; larger pull requests tend to languish without review, as the requirements for review necessarily add burden to the maintainers.
+"Bugfix" changes formally require only one reviewer, whereas the `yt` guidelines suggest that larger changes require review from three different team members.
 
 ### YTEP Process {#sec:ytep}
 
